--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 		<div class = 'text-center' id = 'biography'>
 			<h2 class = 'section-heading text-uppercase'>Welcome</h2>
 			<p>
-				Marco Gonzalez is Computer Science student attending California State University Los Angeles. 
-				During his time at CSULA, Marco has developed ineters in Software Engineering, Web & Internet programming
+				Marco Gonzalez is a Computer Science student attending California State University, Los Angeles. 
+				During his time at CSULA, Marco has developed interests in Software Engineering, Web & Internet programming,
 				Data Science, and Agile/DevOps methodology. In his free time, Marco likes to play videogames,
 				listen to music or discover new music/artists, and hanging out with his friends. Marco also loves puppies!
-				Marco inititally developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
+				Marco initially developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
 				user interface across devices. As Marco continues to learn new technologies, this website will continue to be
 				updated and optimized. This site does not directly collect or store visitors information. All open source
 				code is available on Marco's Github.
