--- a/about.html
+++ b/about.html
@@ -222,9 +222,9 @@
     </div>
     <!--Download resume-->
     <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Resume</h3>
-    <br> <br>
+    <br>
     <div class="d-flex justify-content-center">
-        <a href="resume.pdf" download="resume.pdf"><button class="btn"><i class="fa fa-download"></i> Download resume</button></a>
+        <a href="resume.pdf" download="resume.pdf"><button class="btn"><i class="fa fa-download"></i> Download</button></a>
     </div>
     <br>
     <br>
