--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	
 	<!--- Navigation -->
-	<nav id = 'navbar-example2'class = "navbar navbar-dark navbar-expand-lg">
+	<nav id = "navbar-example2" class = "navbar navbar-dark navbar-expand-lg">
         <div class = "container-fluid">
             <!--Logo-->
             <a class = "navbar-brand">
@@ -66,8 +66,8 @@
 			</div>
 		</div>
 		<br>
-		<div class = 'text-center' id = 'biography'>
-			<h2 class = 'section-heading text-uppercase'>Welcome</h2>
+		<div class = "text-center" id = "biography">
+			<h2 class = "section-heading text-uppercase">Welcome</h2>
 			<p>
 				Marco Gonzalez is a Computer Science student attending California State University, Los Angeles. 
 				During his time at CSULA, Marco has developed interests in Software Engineering, Web & Internet programming,
@@ -83,9 +83,7 @@
 		<br>
 	</section>
 
-
-	
-		<!--- Start Footer -->
+	<!--- Start Footer -->
 	<footer>
 		<div class="text-center p-2  text-light">
 			Copyright © 2021, Marco Gonzalez. All rights reserved.
