--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 				listen to music or discover new music/artists, and hanging out with his friends. Marco also loves puppies!
 				Marco initially developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
 				user interface across devices. As Marco continues to learn new technologies, this website will continue to be
-				updated and optimized. This site does not directly collect or store visitors information. This website is
-				being hoested on Github. All open source code is also available on Marco's Github.
+				updated and optimized. This site does not directly collect or store visitors information and is being hosted on 
+				Github. All open source code on Marco's Github.
 
 			</p>
 		</div>
