--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				Marco initially developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
 				user interface across devices. As Marco continues to learn new technologies, this website will continue to be
 				updated and optimized. This site does not directly collect or store visitors information and is being hosted on 
-				Github. All open source code on Marco's Github.
+				Github. All open source code is available to view on Marco's Github page.
 
 			</p>
 		</div>
