--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 		<p>I am <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
     </div>
 	<!--Bio-->
-	<section class = 'page-section' id = 'services'>
-		<div class = 'containterInfo'></div>
+	<section class = "page-section" id = "services">
+		<div class = "containterInfo"></div>
 		<div class = "row text-center">
 			<div class = "col-md-4">
 				<span class = "fa-stack fa-4x">
@@ -61,7 +61,7 @@
 			<div class = "col-md-4">
 				<span class = "fa-stack fa-4x">
 					<i class = "fas fa-circle fa-stack-2x icon-background"></i>
-					<a href = 'https://github.com/mgonzalez12000'><i class = "fab fa-github fa-stack-1x fa-inverse"></i></a>
+					<a href = "https://github.com/mgonzalez12000"><i class = "fab fa-github fa-stack-1x fa-inverse"></i></a>
 				</span>
 			</div>
 		</div>
@@ -96,7 +96,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <!--Typing effect script-->
-<script src = 'typewriter.js'></script>
+<script src = "typewriter.js"></script>
 <!--- End of Script Source Files -->
 
 </body>
