--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 			<p>
 				Marco Gonzalez is a Computer Science student attending California State University, Los Angeles. 
 				During his time at CSULA, Marco has developed interests in Software Engineering, Web & Internet programming,
-				Data Science, and Agile/DevOps methodology. In his free time, Marco likes to play videogames,
-				listen to music or discover new music/artists, and hanging out with his friends. Marco also loves puppies!
+				Data Science, and Agile/DevOps methodology. In his free time, Marco likes to play videogames,code,
+				listen to music or discover new music/artists, and hang out with his friends. Marco also loves puppies!
 				Marco initially developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
 				user interface across devices. As Marco continues to learn new technologies, this website will continue to be
 				updated and optimized. This site does not directly collect or store visitors information and is being hosted on 
