--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <div class = "line line1">100%</div>
         <h2>Python</h2>
         <div class = "line line2">100%</div>
-        <h2>Javascript</h2>
+        <h2>JavaScript</h2>
         <div class = "line line3">60%</div>
         <h2>HTML</h2>
         <div class = "line line4">90%</div>
