--- a/about.html
+++ b/about.html
@@ -43,25 +43,27 @@
 		</div>
 	</div>
     <!--End image slider-->
+
     <!--Begin chart of skills-->
     <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Technical Skills</h3>
     <div class = "container" id = 'skillschart'>
-        <h2>Java</h2>
+        <h3>Java</h3>
         <div class = "line line1">100%</div>
-        <h2>Python</h2>
+        <h3>Python</h3>
         <div class = "line line2">100%</div>
-        <h2>JavaScript</h2>
+        <h3>JavaScript</h3>
         <div class = "line line3">60%</div>
-        <h2>HTML</h2>
+        <h3>HTML</h3>
         <div class = "line line4">90%</div>
-        <h2>CSS</h2>
+        <h3>CSS</h3>
         <div class = "line line5">90%</div>
-        <h2>SQL</h2>
+        <h3>SQL</h3>
         <div class = "line line6">75%</div>
-        <h2>Git</h2>
+        <h3>Git</h3>
         <div class = "line line7">55%</div>
     </div>
     <!--End chart of skills-->
+
     <!--Experience section-->
     <!--Create grid layout-->
     <div class = "container">
@@ -220,11 +222,14 @@
             </div>
         </div>
     </div>
+
     <!--Download resume-->
     <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Resume</h3>
     <br>
     <div class="d-flex justify-content-center">
-        <a href="resume.pdf" download="resume.pdf"><button class="btn"><i class="fa fa-download"></i> Download</button></a>
+        <a href="resume.pdf" download="resume.pdf">
+            <button class="btn"><i class="fa fa-download"></i> Download</button>
+        </a>
     </div>
     <br>
     <br>
@@ -232,7 +237,7 @@
 	<footer>
 		<div class="text-center p-2 text-light">
 			Copyright © 2021, Marco Gonzalez. All rights reserved.
-		</div><!--- End of Container -->
+		</div>
 	</footer>
 	<!--- End of Footer -->
 
