--- a/about.html
+++ b/about.html
@@ -83,9 +83,9 @@
                                 As a student mentor, I will be mentoring a group of students throughout the duration of their
                                 project. My responsibilities are but not limited to helping/guiding students with little to no
                                 programming expereince in Python, lend my programming knowledge to students so they can think abstractly 
-                                for their solutions, help students troubleshoot their code, and give students the appropiate 
-                                guidance throughout their project. Furthermore, prior to the start date, I am currently taking part of 
-                                team committee meetings to go over program details, and ways to increase student engagement.
+                                to find a solution for their blockers, help students troubleshoot their code, and give students the appropiate 
+                                guidance throughout their project. Furthermore, prior to the start date. I also took part of team committee 
+                                meetings to go over program details, and ways to increase student engagement.
                             </p>
                         </div>
                     </div>
