--- a/about.html
+++ b/about.html
@@ -80,12 +80,11 @@
                         </div>
                         <div class = "p-4">
                             <p class = "card-text text-dark">
-                                As a student mentor, I will be mentoring a group of students throughout the duration of their
-                                project. My responsibilities are but not limited to helping/guiding students with little to no
-                                programming expereince in Python, lend my programming knowledge to students so they can think abstractly 
-                                to find a solution for their blockers, help students troubleshoot their code, and give students the appropiate 
-                                guidance throughout their project. I also took part of team committee meetings to go over program details, 
-                                and ways to increase student engagement.
+                                As a student mentor, I was responsible to mentor a group of students throughout the duration of their
+                                project. My responsibilities were to help/guide students with little to no programming expereince in Python, 
+                                lend my programming knowledge to students so they can think abstractly to find a solution for any blockers, 
+                                help students debug their code, and give students the appropiate guidance throughout their project. I also 
+                                took part of team committee meetings to go over program details, and ways to increase student engagement.
                             </p>
                         </div>
                     </div>
@@ -247,6 +246,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <!--- End of Script Source Files -->
-
 </body>
 </html>
