--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <div class = "line line1">100%</div>
         <h3>Python</h3>
         <div class = "line line2">100%</div>
-        <h3>JavaScript</h3>
+        <h3>Javascript</h3>
         <div class = "line line3">60%</div>
         <h3>HTML</h3>
         <div class = "line line4">90%</div>
@@ -226,7 +226,7 @@
     <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Resume</h3>
     <br>
     <div class="d-flex justify-content-center">
-        <a href="resume.pdf" download="resume.pdf">
+        <a href="resume.pdf" download="Resume.docx">
             <button class="btn"><i class="fa fa-download"></i> Download</button>
         </a>
     </div>
