--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
     <h3 id = "leftHeader" class = "border-bottom border-light text-light p-2">Resume</h3>
     <br>
     <div class="d-flex justify-content-center">
-        <a href="resume.pdf" download="Resume.docx">
+        <a href="Resume.pdf" download="Resume.pdf">
             <button class="btn"><i class="fa fa-download"></i> Download</button>
         </a>
     </div>
