--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                         <div class="p-4">
                             <p class="card-text text-dark">
                                 As a computer science tutor, I tutor and co-teach code.org's "Computer Science
-                                Principle's" to prepare our students for the AP Computer Science Princples exam in May.
+                                Principles" to prepare our students for the AP Computer Science Princples exam in May.
                                 I help students with any questions they have, come up with lesson plans with the
                                 instructor, and also co teach the class.
                             </p>
