--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <!--Logo-->
             <a class="navbar-brand">
-                <em class="fas fa-laptop-code fa-lg"> Marco's Website</em>
+                <em class="fas fa-laptop-code fa-lg" style="color: rgb(11, 209, 4)"> Marco's Website</em>
             </a>
             <!--Create collapse button for small nav bar-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -30,10 +30,10 @@
                 <!--Options-->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" style="color: rgb(7, 214, 0)" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About Me</a>
+                        <a class="nav-link active" style="color: rgb(7, 214, 0)" href="about.html">About Me</a>
                     </li>
                 </ul>
             </div>
