--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>Welcome</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 	<link href="index.css" rel="stylesheet">
 </head>
+
 <body>
-	
+
 	<!--- Navigation -->
-	<nav id = "navbar-example2" class = "navbar navbar-dark navbar-expand-lg">
-        <div class = "container-fluid">
-            <!--Logo-->
-            <a class = "navbar-brand">
-                <em class = "fas fa-laptop-code fa-lg"> Marco's Website</em>
-            </a>
-            <!--Create collapse button for small nav bar-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class = "navbar-toggler-icon"></span>
-            </button>
-            <!--What appears in the nav bar-->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <!--Options-->
-                <ul class="navbar-nav ml-auto">
+	<nav id="navbar-example2" class="navbar navbar-dark navbar-expand-lg">
+		<div class="container-fluid">
+			<!--Logo-->
+			<a class="navbar-brand">
+				<em class="fas fa-laptop-code fa-lg" style="color: rgb(11, 209, 4)"> Marco's Website</em>
+			</a>
+			<!--Create collapse button for small nav bar-->
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<!--What appears in the nav bar-->
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<!--Options-->
+				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link active" href="index.html">Home</a>
+						<a class="nav-link active" style="color: rgb(7, 214, 0)" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="about.html">About Me</a>
+						<a class="nav-link" style="color: rgb(7, 214, 0)" href="about.html">About Me</a>
 					</li>
 				</ul>
 			</div>
@@ -37,62 +42,71 @@
 	<!--- End Navigation -->
 
 	<!--Profile picture-->
-	<img src="profile.jpg" id = "photo" class="center">
+	<img src="profile.jpg" id="photo" class="center">
 
 	<!--Typing animation-->
 	<div class="container">
 		<p>I am <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
-    </div>
+	</div>
 
 	<!--Bio-->
-		<div class = "row text-center">
-			<div class = "col-md-4">
-				<span class = "fa-stack fa-4x">
-					<i class = "fas fa-circle fa-stack-2x icon-background"></i>
-					<a href = "mailto: mgonzalez12000@gmail.com"><i class = "far fa-envelope fa-stack-1x fa-inverse"></i></a>
-				</span>
-			</div>
-			<div class = "col-md-4">
-				<span class = "fa-stack fa-4x">
-					<i class = "fas fa-circle fa-stack-2x icon-background"></i>
-					<a href = "https://www.linkedin.com/in/marcog12000"><i class = "fab fa-linkedin-in fa-stack-1x fa-inverse"></i></a>
-				</span>
-			</div>
-			<div class = "col-md-4">
-				<span class = "fa-stack fa-4x">
-					<i class = "fas fa-circle fa-stack-2x icon-background"></i>
-					<a href = "https://github.com/mgonzalez12000"><i class = "fab fa-github fa-stack-1x fa-inverse"></i></a>
-				</span>
-			</div>
+	<div class="row text-center">
+		<div class="col-md-4">
+			<span class="fa-stack fa-4x">
+				<i class="fas fa-circle fa-stack-2x icon-background"></i>
+				<a href="mailto: mgonzalez12000@gmail.com"><i class="far fa-envelope fa-stack-1x fa-inverse"></i></a>
+			</span>
 		</div>
-		<br>
-		<div class = "text-center" id = "biography">
-			<h2 class = "section-heading text-uppercase">Welcome</h2>
-			<p>
-				Marco Gonzalez is a Computer Science student attending California State University, Los Angeles. 
-				During his time at CSULA, Marco has developed interests in Software Engineering, Web & Internet programming,
-				Data Science, and Agile/DevOps methodology. In his free time, Marco likes to play videogames, code,
-				listen to music or discover new music/artists, and hang out with his friends. Marco also loves puppies!
-				Marco initially developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
-				user interface across devices. As Marco continues to learn new technologies, this website will continue to be
-				updated and optimized. This site does not directly collect or store visitors information and is being hosted on 
-				Github. All open source code is available to view on Marco's Github.
-			</p>
+		<div class="col-md-4">
+			<span class="fa-stack fa-4x">
+				<i class="fas fa-circle fa-stack-2x icon-background"></i>
+				<a href="https://www.linkedin.com/in/marcog12000"><i
+						class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i></a>
+			</span>
 		</div>
-		<br>
-	
+		<div class="col-md-4">
+			<span class="fa-stack fa-4x">
+				<i class="fas fa-circle fa-stack-2x icon-background"></i>
+				<a href="https://github.com/mgonzalez12000"><i class="fab fa-github fa-stack-1x fa-inverse"></i></a>
+			</span>
+		</div>
+	</div>
+	<br>
+	<div class="text-center" id="biography">
+		<h2 class="section-heading text-uppercase">Hello World</h2>
+		<p>
+			Marco Gonzalez is a Computer Science student attending California State University, Los Angeles.
+			During his time at CSULA, Marco has developed interests in Software Engineering, Web & Internet programming,
+			Data Science, and Agile/DevOps methodology. In his free time, Marco likes to play videogames, code,
+			listen to music or discover new music/artists, and hang out with his friends. Marco also loves puppies!
+			Marco initially developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
+			user interface across devices. As Marco continues to learn new technologies, this website will continue to
+			be
+			updated and optimized. This site does not directly collect or store visitors information and is being hosted
+			on
+			Github. All open source code is available to view on Marco's Github.
+		</p>
+	</div>
+	<br>
+
 	<!--- Start Footer -->
 	<footer>
 		<div class="text-center p-2  text-light">
 			Copyright © 2021, Marco Gonzalez. All rights reserved.
-		</div><!--- End of Container -->
+		</div>
+		<!--- End of Container -->
 	</footer>
 	<!--- End of Footer -->
 
-<!--- Script Source Files -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-<script src = "typewriter.js"></script>
-<!--- End of Script Source Files -->
+	<!--- Script Source Files -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+		integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+		crossorigin="anonymous" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+	</script>
+	<script src="typewriter.js"></script>
+	<!--- End of Script Source Files -->
 </body>
+
 </html>
