--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container-fluid">
 			<!--Logo-->
 			<a class="navbar-brand">
-				<em class="fas fa-laptop-code fa-lg" style="color: rgb(11, 209, 4)"> Marco's Website</em>
+				<em class="fas fa-laptop-code fa-lg" style="color: rgb(44, 190, 0)"> Marco's Website</em>
 			</a>
 			<!--Create collapse button for small nav bar-->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -73,7 +73,7 @@
 	</div>
 	<br>
 	<div class="text-center" id="biography">
-		<h2 class="section-heading text-uppercase">Hello World</h2>
+		<p style="font-size: 35px; font-family: 'Courier New', Courier, monospace;">Hello World</p>
 		<p>
 			Marco Gonzalez is a Computer Science student attending California State University, Los Angeles.
 			During his time at CSULA, Marco has developed interests in Software Engineering, Web & Internet programming,
