--- a/about.html
+++ b/about.html
@@ -86,9 +86,11 @@
                         <div class="p-4">
                             <p class="card-text text-dark">
                                 As a computer science tutor, I tutor and co-teach code.org's "Computer Science
-                                Principles" to prepare our students for the AP Computer Science Princples exam in May.
-                                I help students with any questions they have, come up with lesson plans with the
-                                instructor, and also co teach the class.
+                                Principles" course to prepare our students for their AP Computer Science Principles exam
+                                in May. I help students with any questions they have, create/adjust lesson plans with
+                                the instructor, and also co teach the class. Our students are currently learning
+                                app development, procedural programming, scope, functions, loops, the list data
+                                structure, and algorithms.
                             </p>
                         </div>
                     </div>
