--- a/about.html
+++ b/about.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>About Me</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <title>About Me</title>
 </head>
 
 <body>
-
     <!--- Navigation -->
     <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
@@ -42,10 +44,35 @@
     <!--- End Navigation -->
 
     <!--- Image Slider -->
-    <div class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active"><img src="nasa.jpg"></div>
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="nasa.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="ACSC.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="Class.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="Tutor.jpg" alt="Third slide">
+            </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
     <!--End image slider-->
 
@@ -81,16 +108,16 @@
                 <div class="p-4">
                     <div id="leftCard4" class="card">
                         <div class="card-header bg-dark text-light">
-                            Computer Science Tutor at Community Partners (January 2022 - Present)
+                            Computer Science Tutor at Community Partners (January 2022 - May 2022)
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
-                                As a computer science tutor, I tutor and co-teach code.org's "Computer Science
+                                As a computer science tutor, I tutored and co-taught code.org's "Computer Science
                                 Principles" course to prepare our students for their AP Computer Science Principles exam
-                                in May. I help students with any questions they have, create/adjust lesson plans with
-                                the instructor, and also co teach the class. Our students are currently learning
-                                app development, procedural programming, scope, functions, loops, the list data
-                                structure, and algorithms.
+                                in May. I help students with any programming questions they had, created/adjusted lesson
+                                plans with the instructor, and also co taught the class. Through my lectures, our
+                                students learned app development, procedural programming, scope, functions, loops, the
+                                list data structure, and algorithms.
                             </p>
                         </div>
                     </div>
@@ -99,16 +126,15 @@
                 <div class="p-4">
                     <div id="leftCard3" class="card">
                         <div class="card-header bg-dark text-light">
-                            Student Mentor at XSEDE's Computing4Change (August 2021 - Present)
+                            Peer Mentor at XSEDE's Computing4Change (August 2021 - May 2022)
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
-                                As a student mentor, I am responsible to mentor a group of students throughout the
-                                duration of their project. My responsibilities are to help/guide students with little to
-                                no programming experience in Python, lend my programming knowledge to students so they
-                                can think abstractly to find solution to their blockers, help students debug their code,
-                                and give students the appropriate guidance throughout their project. Currently mentoring
-                                my second cohort.
+                                As a student mentor, I was responsible to mentor a group of students throughout the
+                                duration of their project. My responsibilities were to help/guide students with little
+                                to no programming experience in Python, lend my programming knowledge to students so
+                                they can think abstractly to find solution to their blockers, help students debug their
+                                code, and give students the appropriate guidance throughout their project.
                             </p>
                         </div>
                     </div>
@@ -117,18 +143,16 @@
                 <div class="p-4">
                     <div id="leftCard1" class="card">
                         <div class="card-header bg-dark text-light">
-                            XSEDE Data Science Internship (Summer 2020)
+                            XSEDE ACSC Data Science Research Internship (June 2020 - August 2020)
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
-                                At XSEDE, I was responsible to learn to apply data analysis and computational thinking
-                                to a social challenge that existed in Los Angeles. I found gunshot detection systems to
-                                be a potential solution towards gun violence. I accessed nationwide police departments
-                                CSV files who already use similar technologies. I used IDE’s such as Jupyter Notebook
-                                and RStudio, to design and write code to create, analytical/statistical graphs, tables,
-                                and charts to evaluate my data. With my data gathered, and the help of my mentor, I
-                                created a presentation to present my findings, data, and solution at the conclusion of
-                                my internship.
+                                At XSEDE's Advanced Computing For Social Change, I learned and worked with
+                                multidisciplinary teams to apply data analysis and computational thinking to a social
+                                challenge. I was able to get hands on experience with HPC and ran, tracked, and stopped
+                                Jupyter Notebook jobs via TACC's supercomputers. Within these jobs, I parsed CSV
+                                files, created DataFrames, and wrote scripts to create appropriate data visualization
+                                with effective and engaging designs.
                             </p>
                         </div>
                     </div>
@@ -276,6 +300,19 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
     <!--- End of Script Source Files -->
+</body>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+</script>
 </body>
 
 </html>
