Fixed File Download
Fixed resume type to download

--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
     <h3 id="leftHeader" class="border-bottom border-light text-light p-2">Resume</h3>
     <br>
     <div class="d-flex justify-content-center">
-        <a href="Resume.pdf" download="Resume.pdf">
+        <a href="Resume.docx" download="Resume.docx">
             <button class="btn"><i class="fa fa-download"></i> Download</button>
         </a>
     </div>
