--- a/about.html
+++ b/about.html
@@ -114,8 +114,8 @@
                             <p class="card-text text-dark">
                                 As a computer science tutor, I tutored and co-taught code.org's "Computer Science
                                 Principles" course to prepare our students for their AP Computer Science Principles exam
-                                in May. I help students with any programming questions they had, created/adjusted lesson
-                                plans with the instructor, and also co taught the class. Through my lectures, our
+                                in May. I helped students with any programming questions they had, created/adjusted
+                                lesson plans with the instructor, and also co taught the class. Through my lectures, our
                                 students learned app development, procedural programming, scope, functions, loops, the
                                 list data structure, and algorithms.
                             </p>
@@ -131,10 +131,12 @@
                         <div class="p-4">
                             <p class="card-text text-dark">
                                 As a student mentor, I was responsible to mentor a group of students throughout the
-                                duration of their project. My responsibilities were to help/guide students with little
+                                duration of their project. My responsibilities were to assist students to create a
+                                research question that meets the scope of the work load for a week long
+                                challenge.Furthermore, I also helped/guided participants with little
                                 to no programming experience in Python, lend my programming knowledge to students so
                                 they can think abstractly to find solution to their blockers, help students debug their
-                                code, and give students the appropriate guidance throughout their project.
+                                code, and help participants create meaningful data visualizations that tell a story.
                             </p>
                         </div>
                     </div>
