--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
         <div class="line line1">100%</div>
         <h3>Python</h3>
         <div class="line line2">100%</div>
-        <h3>Javascript</h3>
+        <h3>JavaScript</h3>
         <div class="line line3">60%</div>
         <h3>HTML</h3>
         <div class="line line4">90%</div>
