Fixed PDF Download and About Me
Updated PDF File to be downloaded, and about me section with latest experience.

--- a/about.html
+++ b/about.html
@@ -104,7 +104,30 @@
             <div class="m-0 p-2 col-md-7 col-lg-7">
                 <!--Header-->
                 <h3 id="leftHeader" class="border-bottom border-light text-light p-2">Experience</h3>
-                <!--Left card 4-->
+                <!--Left card 5-->
+                <div class="p-5">
+                    <div id="leftCard4" class="card">
+                        <div class="card-header bg-dark text-light">
+                            Computer Science Tutor at Community Partners (January 2022 - May 2022)
+                        </div>
+                        <div class="p-5">
+                            <p class="card-text text-dark">
+                                I was responsible to design Agile User Stories (JIRA) for the Strategic Customer Group
+                                (SCG) site by meeting with technology leads and stakeholders to capture business
+                                requirements while ensuring proper UI/UX design requirements. I also created a
+                                Sharepoint site for JET Cargo for Ponvory. Worked with Brand partners and across Product
+                                Lines to leverage existing Sharepoint site template and incorporate Ponvory brand
+                                requirements into a new site. Guided brand team in developing a strategy for their
+                                website structure, then proceed to set up the site, and engage with brand to further
+                                enhance the site. On another project, I built analytics dashboards for Spravato to
+                                enable a comparison of metrics before and after a website redesign, from gathering
+                                requirements, learning Google Datastudio and Google Analytics technologies, and building
+                                the dashboard to meet business requirements. Presented a demo of the dashboard to
+                                leadership/business/agency teams.
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="p-4">
                     <div id="leftCard4" class="card">
                         <div class="card-header bg-dark text-light">
@@ -278,7 +301,7 @@
     <h3 id="leftHeader" class="border-bottom border-light text-light p-2">Resume</h3>
     <br>
     <div class="d-flex justify-content-center">
-        <a href="Resume.docx" download="Resume.docx">
+        <a href="Resume.pdf" download="Resume.pdf">
             <button class="btn"><i class="fa fa-download"></i> Download</button>
         </a>
     </div>
