--- a/about.html
+++ b/about.html
@@ -105,12 +105,12 @@
                 <!--Header-->
                 <h3 id="leftHeader" class="border-bottom border-light text-light p-2">Experience</h3>
                 <!--Left card 5-->
-                <div class="p-5">
-                    <div id="leftCard4" class="card">
+                <div class="p-4">
+                    <div id="leftCard5" class="card">
                         <div class="card-header bg-dark text-light">
-                            Computer Science Tutor at Community Partners (January 2022 - May 2022)
+                            Johnson & Johnson Technology Intern
                         </div>
-                        <div class="p-5">
+                        <div class="p-4">
                             <p class="card-text text-dark">
                                 I was responsible to design Agile User Stories (JIRA) for the Strategic Customer Group
                                 (SCG) site by meeting with technology leads and stakeholders to capture business
