--- a/about.html
+++ b/about.html
@@ -116,14 +116,14 @@
                                 (SCG) site by meeting with technology leads and stakeholders to capture business
                                 requirements while ensuring proper UI/UX design requirements. I also created a
                                 Sharepoint site for JET Cargo for Ponvory. Worked with Brand partners and across Product
-                                Lines to leverage existing Sharepoint site template and incorporate Ponvory brand
+                                Lines to leverage existing SharePoint site template and incorporate Ponvory brand
                                 requirements into a new site. Guided brand team in developing a strategy for their
                                 website structure, then proceed to set up the site, and engage with brand to further
                                 enhance the site. On another project, I built analytics dashboards for Spravato to
                                 enable a comparison of metrics before and after a website redesign, from gathering
-                                requirements, learning Google Datastudio and Google Analytics technologies, and building
-                                the dashboard to meet business requirements. Presented a demo of the dashboard to
-                                leadership/business/agency teams.
+                                requirements, learning Google Data Studio and Google Analytics technologies, and
+                                building the dashboard to meet business requirements. Presented a demo of the dashboard
+                                to leadership/business/agency teams.
                             </p>
                         </div>
                     </div>
