--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                 <div class="p-4">
                     <div id="leftCard5" class="card">
                         <div class="card-header bg-dark text-light">
-                            Johnson & Johnson Technology Intern
+                            Johnson & Johnson Technology Intern (June 2022 - August 2022)
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
