--- a/about.html
+++ b/about.html
@@ -104,6 +104,19 @@
             <div class="m-0 p-2 col-md-7 col-lg-7">
                 <!--Header-->
                 <h3 id="leftHeader" class="border-bottom border-light text-light p-2">Experience</h3>
+                <div class="p-4">
+                    <div id="leftCard6" class="card">
+                        <div class="card-header bg-dark text-light">
+                            We2Link (August 2022 - Present)
+                        </div>
+                        <div class="p-4">
+                            <p class="card-text text-dark">
+                                Migrate We2Link’s Want2Remember mobile app to a web app by building web components with JavaScript’s React and the Tailwind CSS framework. Enabling such components to work with Firebase to upload/store inputted user data.
+                                Conduct PR reviews to ensure clean and stable code is being merged onto our main branch by using the browser console and a Firebase emulator. Ensuring effective communication with team members by providing requested changes via GitHub and Jira. Provide updates/communicate blockers with team during weekly standup meetings.
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 <!--Left card 5-->
                 <div class="p-4">
                     <div id="leftCard5" class="card">
