--- a/about.html
+++ b/about.html
@@ -103,12 +103,12 @@
                 <div class="p-4">
                     <div id="leftCard6" class="card">
                         <div class="card-header bg-dark text-light">
-                            We2Link (August 2022 - Present)
+                            We2Link (August 2022 - May 2023)
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
-                                Migrate We2Link’s Want2Remember mobile app to a web app by building web components with JavaScript’s React and the Tailwind CSS framework. Enabling such components to work with Firebase to upload/store inputted user data.
-                                Conduct PR reviews to ensure clean and stable code is being merged onto our main branch by using the browser console and a Firebase emulator. Ensuring effective communication with team members by providing requested changes via GitHub and Jira. Provide updates/communicate blockers with team during weekly standup meetings.
+                                Migrated We2Link’s Want2Remember mobile app to a web app by building web components with JavaScript’s React and the Tailwind CSS framework. Enabling such components to work with Firebase to upload/store inputted user data.
+                                Conducted PR reviews in an Agile workflow to ensure that clean and stable code is being merged onto our main branch by using the browser's console and a Firebase emulator. Ensuring effective communication with team members by providing requested changes via GitHub, Jira, and Slack. Provided updates/communicate blockers with team during weekly standup meetings.
                             </p>
                         </div>
                     </div>
