--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	</div>
 
 	<!--Bio-->
+	<!--Causing centering issues with page-->
 	<div class="row text-center">
 		<div class="col-md-4">
 			<span class="fa-stack fa-4x">
@@ -77,15 +78,13 @@
 	<div class="text-center" id="biography">
 		<p style="font-size: 35px; font-family: 'Courier New', Courier, monospace;">Hello World</p>
 		<p>
-			Marco Gonzalez is a Computer Science student attending California State University, Los Angeles.
+			Marco Gonzalez is a Computer Science graduate from California State University, Los Angeles.
 			During his time at CSULA, Marco has developed interests in Software Engineering, Web & Internet programming,
 			Data Science, and Agile/DevOps methodology. In his free time, Marco likes to play videogames, code,
 			listen to music or discover new music/artists, and hang out with his friends. Marco also loves puppies!
 			Marco initially developed this website from the ground up with HTML, CSS, and Bootstrap for a responsive
 			user interface across devices. As Marco continues to learn new technologies, this website will continue to
-			be
-			updated and optimized. This site does not directly collect or store visitors information and is being hosted
-			on
+			be updated and optimized. This site does not directly collect or store visitors information and is being hosted on
 			Github. All open source code is available to view on Marco's Github.
 		</p>
 	</div>
@@ -94,7 +93,7 @@
 	<!--- Start Footer -->
 	<footer>
 		<div class="text-center p-2  text-light">
-			Copyright © 2022, Marco Gonzalez. All rights reserved.
+			Copyright © 2023, Marco Gonzalez. All rights reserved.
 		</div>
 		<!--- End of Container -->
 	</footer>
