--- a/about.html
+++ b/about.html
@@ -80,15 +80,17 @@
         <h3>Python</h3>
         <div class="line line2">100%</div>
         <h3>JavaScript</h3>
-        <div class="line line3">80%</div>
+        <div class="line line3">100%</div>
+        <h3>React</h3>
+        <div class="line line7">80%</div>
         <h3>HTML</h3>
-        <div class="line line4">90%</div>
+        <div class="line line4">100%</div>
         <h3>CSS</h3>
-        <div class="line line5">90%</div>
+        <div class="line line5">100%</div>
         <h3>SQL</h3>
-        <div class="line line6">75%</div>
+        <div class="line line6">79%</div>
         <h3>Git</h3>
-        <div class="line line7">55%</div>
+        <div class="line line7">80%</div>
     </div>
     <!--End chart of skills-->
 
@@ -293,7 +295,7 @@
                         </div>
                         <div class="p-4">
                             <p class="card-text text-dark">
-                                - FileZiila (File Transfer Protocol)
+                                - FileZilla (File Transfer Protocol)
                             </p>
                             <p class="card-text text-dark">
                                 - WinSCP (File Transfer Protocol)
@@ -329,6 +331,9 @@
                         <div class="p-4">
                             <p class="card-text text-dark">
                                 - GitHub
+                            </p>
+                            <p class="card-text text-dark">
+                                - Jira
                             </p>
                         </div>
                     </div>
